--- a/src/components/blue_blocks/styles/blue_block.scss
+++ b/src/components/blue_blocks/styles/blue_block.scss
@@ -1,21 +1,15 @@
 .blue-block{
 
-  $blue: #006FA0;
-  $lightBlue: #F2FAFF;
-
   color:$blue;
   font-size: 14px;
   font-family: 'OpenSans', 'sans-serif';
   background-color: $lightBlue;
   border-radius: 5px;
   padding: 6px 10px;
-  display: flex;
-  align-items: center;
-  flex:0 0 50%;
+  width: 100%;
   max-width: 185px;
-  justify-content: center;
   text-align: center;
-  margin-bottom: 10px;
+  box-sizing: border-box;
 }
 
 @media(max-width: 600px){
