--- a/src/components/feature/feature.html
+++ b/src/components/feature/feature.html
@@ -1,14 +1,14 @@
-<div class="feature">
+<figure class="feature">
     <img  class="feature__image" src="images/feature_1.svg" alt="">
-    <span class="feature__text">Feature 1</span>
-</div>
+    <figcaption class="feature__text">Feature 1</figcaption>
+</figure>
 
-<div class="feature">
+<figure class="feature">
     <img  class="feature__image" src="images/feature_2.svg" alt="">
-    <span class="feature__text">Feature 2</span>
-</div>
+    <figcaption class="feature__text">Feature 2</figcaption>
+</figure>
 
-<div class="feature">
+<figure class="feature">
     <img  class="feature__image" src="images/feature_3.svg" alt="">
-    <span class="feature__text">Feature 3</span>
-</div>
+    <figcaption class="feature__text">Feature 3</figcaption>
+</figure>
