--- a/src/components/item/item.html
+++ b/src/components/item/item.html
@@ -1,16 +1,16 @@
-<div class="item">
-    <div class="item__header">
+<section class="item">
+    <header class="item__header">
 
         //= ../person/person.html
 
-    </div>
-    <div class="item__body">
+    </header>
+    <main class="item__body">
         //= ../feature/feature.html
-    </div>
-    <div class="item__footer">
+    </main>
+    <footer class="item__footer">
         //= ../blue_blocks/blue_blocks.html
         <div class="item__button">
             //= ../button/button.html
         </div>
-    </div>
-</div>
+    </footer>
+</section>
