--- a/src/components/person/person.html
+++ b/src/components/person/person.html
@@ -1,7 +1,7 @@
 <div class="person">
     <img class="person__photo" src="images/client_image.png" alt="">
-    <span class="person__name">John Doe</span>
-    <div class="person__rating">
+    <div class="person__info">
+        <a href="#" class="name">John Doe</a>
         //= ../rating/rating.html
     </div>
 </div>
