--- a/src/components/rating/rating.html
+++ b/src/components/rating/rating.html
@@ -1,11 +1,12 @@
 <div class="rating">
     <span class="rating__label">Rating:</span>
-    <ul class="stars-list rating_list">
-        <li class="stars-list__star"></li>
-        <li class="stars-list__star"></li>
-        <li class="stars-list__star"></li>
-        <li class="stars-list__star"></li>
-        <li class="stars-list__star"></li>
-    </ul>
+    <div class="stars-list rating_list">
+        <span style="max-width: 97%" class="stars-list__stars stars-list__stars_yellow">
+            <img src="images/yellow_stars.svg" alt="">
+        </span>
+        <span class="stars-list__stars stars-list__stars_grey">
+            <img src="images/grey_stars.svg" alt="">
+        </span>
+    </div>
     <span class="rating__score">97%</span>
 </div>
