--- a/src/components/person/styles/person.scss
+++ b/src/components/person/styles/person.scss
@@ -1,29 +1,17 @@
 .person{
 
-  $blue:#006FA0;
-
-  .person__name{
-    display: block;
-    width:calc(100% - 90px);
-    font-family: 'OpenSans', 'sans-serif';
-    font-size: 18px;
-    font-weight: bold;
-    color:$blue;
-    float: left;
-    margin-top: 10px;
-  }
+  display: flex;
+  flex-direction: row;
 
   .person__photo{
     width:70px;
     height: 70px;
     border-radius: 50%;
     margin-right: 20px;
-    float: left;
   }
 
-  .person__rating{
-    float: left;
-    margin-top: 2px;
+  .person__info{
+    flex:1 0 calc(100% - 90px);
   }
 
   &:after{
@@ -33,22 +21,31 @@
   }
 }
 
+
+.name{
+  display: block;
+  font-family: 'OpenSans', 'sans-serif';
+  font-size: 18px;
+  font-weight: bold;
+  color:$blue;
+  margin-top: 10px;
+  text-decoration: none;
+  outline: none;
+}
+
 @media(max-width:600px){
   .person{
+
+    flex-direction: column;
+
     .person__photo{
       display: block;
       float: none;
       margin: 0 auto;
     }
 
-    .person__name{
-      float: none;
-      width: initial;
-      text-align: center;
-    }
-
-    .person__rating{
-      float: none;
+    .person__info{
+      flex:1 0 100%;
       text-align: center;
     }
   }
